--- a/frontend/src/scss/Post/caption.scss
+++ b/frontend/src/scss/Post/caption.scss
@@ -3,11 +3,12 @@
 .app__post__caption {
   @include flex(center, flex-start);
   gap: 0.5rem;
+  width: 100%;
   margin: 1rem 1rem 0.5rem;
 
   img {
-    width: 32px;
-    height: 32px;
+    width: 2rem;
+    height: 2rem;
     border-radius: 50%;
   }
 }
