--- a/frontend/src/scss/Post/commentForm.scss
+++ b/frontend/src/scss/Post/commentForm.scss
@@ -6,6 +6,10 @@
   width: 100%;
   padding: 0.5rem 1rem;
   border-top: 1px solid $light-gray;
+
+  textarea {
+    min-height: 3rem;
+  }
 }
 
 .app__comment__dot {
