Show post likes and comment likes

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -123,3 +123,9 @@ img {
   border-radius: 100px;
   background-color: #80808080;
 }
+
+.avatar {
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+}
