Show comment likes and post likes

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -102,6 +102,10 @@ img {
   color: $light-font;
 }
 
+.pointer {
+  cursor: pointer;
+}
+
 .semibold__pointer {
   cursor: pointer;
   font-weight: 600;
