Add loading states for listmodal

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -113,6 +113,7 @@ img {
 
 .app__loading__line {
   @include loadingAnimation;
+  display: inline-block;
   width: 75%;
   height: 0.5rem;
   border-radius: 100px;
