--- a/frontend/src/scss/Modals/listModal.scss
+++ b/frontend/src/scss/Modals/listModal.scss
@@ -1,7 +1,7 @@
 @use '../index.scss' as *;
 
 .app__list__modal {
-  .modal__content {
+  .modal__content__wrapper {
     @include flex(center, flex-start);
     min-height: 50%;
   }
@@ -16,12 +16,14 @@
 .app__list {
   @include flex(flex-start, flex-start);
   flex-direction: column;
+  width: 100%;
   height: 100%;
   padding-top: 0.5rem;
 
   .app__list__item {
     @include flex(center, flex-start);
     gap: 0.5rem;
+    width: 100%;
     padding: 0.5rem;
 
     p {
