--- a/frontend/src/scss/Modals/modal.scss
+++ b/frontend/src/scss/Modals/modal.scss
@@ -15,7 +15,7 @@
   }
 }
 
-.modal__content {
+.modal__content__wrapper {
   @include flex(center, center);
   flex-direction: column;
   gap: 0.5rem;
@@ -25,7 +25,7 @@
   background-color: white;
   overflow-y: auto;
 
-  &__main {
+  .modal__content {
     width: 100%;
     height: 100%;
   }
