--- a/frontend/src/scss/Pages/profile.scss
+++ b/frontend/src/scss/Pages/profile.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   gap: 2rem;
   width: 70%;
+  height: 100%;
 
   @media screen and (max-width: 1919px) {
     width: 85%;
