Add delete post functionality to frontend

--- a/frontend/src/scss/Pages/post.scss
+++ b/frontend/src/scss/Pages/post.scss
@@ -8,6 +8,7 @@
   @media screen and (max-width: 1024px) {
     @include flex(center, flex-start);
     flex-direction: column;
+    height: fit-content;
   }
 }
 
