--- a/frontend/src/scss/Pages/post.scss
+++ b/frontend/src/scss/Pages/post.scss
@@ -15,6 +15,7 @@
 .app__post__photos {
   flex: 2;
   height: 100%;
+  padding: 10rem 0;
   background: black;
 
   .main__image img {
@@ -28,6 +29,10 @@
 
   @media screen and (max-width: 1024px) {
     width: 100%;
+  }
+
+  @media screen and (max-width: 480px) {
+    padding: 5rem 0;
   }
 }
 
