--- a/frontend/src/scss/Pages/post.scss
+++ b/frontend/src/scss/Pages/post.scss
@@ -15,7 +15,7 @@
 .app__post__photos {
   flex: 2;
   height: 100%;
-  padding: 5rem 0;
+  padding-top: 5rem;
   background: black;
 
   .main__image img {
