finish notifications for mobile, and add animations for sidebar and modals

--- a/frontend/src/scss/Navbar/navbar.scss
+++ b/frontend/src/scss/Navbar/navbar.scss
@@ -25,6 +25,7 @@
 .app__navbar__logo {
   @include flex(center, flex-start);
   gap: 0.5rem;
+  height: 120px;
   padding: 1.5rem 0.75rem;
   color: black;
   text-decoration: none;
