--- a/frontend/src/scss/Navbar/navfooter.scss
+++ b/frontend/src/scss/Navbar/navfooter.scss
@@ -2,6 +2,7 @@
 
 .app__navfooter {
   display: none;
+  z-index: 3;
 
   @media screen and (max-width: 480px) {
     @include flex(center, space-between);
