Add search functionality

--- a/frontend/src/scss/StatusIndicator/listLoading.scss
+++ b/frontend/src/scss/StatusIndicator/listLoading.scss
@@ -1,6 +1,6 @@
 @use '../index.scss' as *;
 
-.app__notification__loading {
+.app__list__loading {
   @include flex(center, flex-start);
   gap: 0.5rem;
   width: 100%;
