--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -51,6 +51,10 @@ button:disabled {
 img {
   -webkit-user-drag: none;
 }
+a {
+  text-decoration: none;
+  color: black;
+}
 
 .flex__center {
   @include flex(center, center);
