--- a/frontend/src/scss/Pages/post.scss
+++ b/frontend/src/scss/Pages/post.scss
@@ -44,7 +44,6 @@
 
 .app__post__date {
   font-size: 0.75rem;
-  line-height: 1rem;
 
   &::before {
     content: '';
@@ -54,6 +53,6 @@
     border-radius: 50%;
     background-color: gray;
     vertical-align: middle;
-    margin-right: 0.5rem;
+    margin: 0 0.5rem;
   }
 }
