--- a/frontend/src/scss/StatusIndicator/carouselLoading.scss
+++ b/frontend/src/scss/StatusIndicator/carouselLoading.scss
@@ -3,6 +3,7 @@
 .app__carousel__loading {
   @include loadingAnimation;
   width: 100%;
-  height: 100%;
+  height: 39rem;
+  border-radius: 0.5rem;
   background-color: #80808080;
 }
