Add some color varibles

--- a/frontend/src/scss/StatusIndicator/actionsLoading.scss
+++ b/frontend/src/scss/StatusIndicator/actionsLoading.scss
@@ -6,6 +6,6 @@
     width: 24px;
     height: 24px;
     border-radius: 100px;
-    background-color: #80808080;
+    background-color: $loading-bg;
   }
 }
