--- a/frontend/src/scss/variables.scss
+++ b/frontend/src/scss/variables.scss
@@ -1,5 +1,7 @@
-$font-family-heading: "Mate SC", serif;
+$font-family-heading: 'Mate SC', serif;
 $primary-color: #d52a74;
 $light-gray: #dbdbdb;
 $light-font: #8e8e8e;
 $light-btn-bg: #efefef;
+$loading-bg: #80808080;
+$loading-light-bg: #808080cc;
