--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -126,7 +126,7 @@ a {
   width: 75%;
   height: 0.5rem;
   border-radius: 100px;
-  background-color: #80808080;
+  background-color: $loading-bg;
 }
 
 .app__loading__date {
@@ -135,7 +135,7 @@ a {
   height: 0.5rem;
   margin: 0 1rem;
   border-radius: 100px;
-  background-color: #80808080;
+  background-color: $loading-bg;
 }
 
 .avatar {
