--- a/frontend/src/scss/Modals/modal.scss
+++ b/frontend/src/scss/Modals/modal.scss
@@ -31,6 +31,7 @@
   flex-direction: column;
   gap: 0.5rem;
   width: 450px;
+  height: 50%;
   padding: 1rem;
   border-radius: 0.5rem;
   background-color: white;
