--- a/frontend/src/scss/StatusIndicator/gridLoading.scss
+++ b/frontend/src/scss/StatusIndicator/gridLoading.scss
@@ -5,6 +5,6 @@
   width: 100%;
   border-radius: 0.5rem;
   aspect-ratio: 1/1;
-  background-color: #80808080;
+  background-color: $loading-bg;
   object-fit: cover;
 }
